# rustok

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  SETUP.md  deny.toml
.github/workflows/: android-debug.yml  android-release.yml  ci.yml
app/src/: Cargo.toml  index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: biometric_storage.rs  commands.rs  lib.rs
app/src/assets/: anti-fouc.js
app/src/src/: app.rs  bridge.rs
app/src/src/components/: button.rs  dark_shell.rs  icons.rs  mod.rs  passcode.rs  wizard_success.rs
app/src/src/pages/: activity.rs  analyze.rs  balance.rs  home.rs  mod.rs  receive.rs  restore.rs  send.rs  settings.rs  unlock.rs  wallet.rs  welcome.rs
app/src/styles/: main.css
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: amount.rs  convert.rs  explorer.rs  http.rs  lib.rs  send.rs
crates/core/src/explainer/: mod.rs
crates/core/src/keyring/: local.rs  mod.rs
crates/core/src/provider/: chains.rs  mod.rs  multi.rs
crates/core/src/router/: mod.rs
crates/txguard/: Cargo.toml
crates/txguard/src/: lib.rs  types.rs
crates/txguard/src/enrichment/: goplus.rs  mod.rs
crates/txguard/src/parser/: abi.rs  calldata.rs  known.rs  mod.rs
crates/txguard/src/rules/: approval.rs  contract.rs  engine.rs  mod.rs  permit.rs  send.rs
crates/txguard/src/simulator/: inspector.rs  mod.rs
crates/types/src/: lib.rs
docs/: ANDROID-RELEASE.md  BUGS-ANDROID-2026-04-26.md  COMPONENTS.md  MOBILE.md  NATIVE-MIGRATION-PLAN.md  PHASE2-LEPTOS-TAURI.md  POC-FOUNDATION.md  REDESIGN-AUDIT.md  REDESIGN.md  RESEARCH-NATIVE-STACKS.md  SESSION-NEXT.md  SESSION.md  TECHNICAL.md  TESTING.md  VISION.md
docs/_archive/: FRONTEND-IMPLEMENTATION-WEBVIEW.md
docs/research/: across.md  alloy-rs.md  anychain.md  coinbase-smart-wallet.md  lifi.md  rabby.md
docs/video/: EP1-why-rust.html  EP1-why-rust.md  SERIES-PLAN.md  slides.html
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/rustok/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/Rustok/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/ios/Rustok.xcodeproj/: project.pbxproj
mobile/ios/Rustok.xcodeproj/xcshareddata/xcschemes/: Rustok.xcscheme
Стандарты/: README.md  architecture.md  pipeline.md  testing.md
Стандарты/rust/: CORE.md  INDEX.md  performance.md
Стандарты/rust/blockchain/: alloy.md
Стандарты/rust/review/: checklist.md
Стандарты/rust/security/: crypto.md
Стандарты/rust/web/: leptos.md
