[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/qallet/qallet"
authors = ["temrjan"]

[workspace.lints.rust]
missing-docs = "warn"
unused-must-use = "deny"
unreachable-pub = "warn"

[workspace.lints.clippy]
all = "warn"
missing-const-for-fn = "warn"
use-self = "warn"

[workspace.dependencies]
# Ethereum primitives
alloy-primitives = "1.5"
alloy-sol-types = "1.5"
alloy-dyn-abi = "1.5"
alloy-json-abi = "1.5"

# Ethereum RPC & provider
alloy-provider = "1.8"
alloy-transport-http = "1.8"
alloy-rpc-types-eth = "1.8"
alloy-network = "1.8"
alloy-consensus = { version = "1.8", default-features = false, features = ["std"] }
alloy-contract = "1.8"
alloy-signer = "1.8"
alloy-signer-local = "1.8"
alloy-chains = "0.2"
alloy-evm = { version = "0.30", default-features = false, features = ["std"] }

# Ethereum block types (BlockId for state forking)
alloy-eips = "1.8"

# EVM simulation (v36 uses c-kzg v2, compatible with alloy 1.8)
revm = { version = "36", default-features = false, features = ["std", "serde", "alloydb"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
