[package]
name = "rustok-desktop"
version = "0.1.2"
# edition 2021: Tauri 2 macros not yet tested with edition 2024
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
publish = false

# App crate — inherit core safety lints but relax docs/visibility (not a library)
[lints.rust]
unsafe_code = "deny"
unused-must-use = "deny"

[lints.clippy]
all = "warn"

[lib]
name = "rustok_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rustok-core = { path = "../../crates/core" }
txguard = { path = "../../crates/txguard" }
rustok-types = { path = "../../crates/types" }
alloy-primitives = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
tauri-plugin-biometric = "2"
tauri-plugin-clipboard-manager = "2"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"
