[package]
name = "rustok-frontend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
rustok-types = { path = "../../crates/types" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
