[package]
name = "eth-wallet-api"
description = "HTTP API server for txguard and eth-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
txguard = { path = "../txguard" }
tokio = { workspace = true }
