[package]
name = "qallet"
description = "CLI for txguard and qallet wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
txguard = { path = "../txguard" }
qallet-core = { path = "../core" }
alloy-primitives = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
