[package]
name = "rustok-core"
description = "Core wallet logic — keyring, provider, router, explainer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
txguard = { path = "../txguard" }
rustok-types = { path = "../types" }

# Ethereum
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-network = { workspace = true }
alloy-consensus = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-chains = { workspace = true }
alloy-eips = { workspace = true }

# Crypto (key encryption)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# HTTP (shared client for RPC providers — must match alloy-provider's reqwest version).
# `rustls-no-provider` activates __rustls without auto-installing a platform verifier;
# we supply webpki-roots + ring via ClientBuilder::use_preconfigured_tls in http.rs.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1"

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
