[package]
name = "txguard"
description = "Transaction security engine for EVM — analyze, simulate, and explain transactions before signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Ethereum primitives & ABI
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-json-abi = { workspace = true }

# RPC (state fetching for simulation)
alloy-provider = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-network = { workspace = true }
alloy-consensus = { workspace = true }
alloy-evm = { workspace = true }
alloy-eips = { workspace = true }

# EVM simulation
revm = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP client (GoPlus API)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
